--- a/ECommerce/package.json
+++ b/ECommerce/package.json
@@ -20,7 +20,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "mongodb": "3.6.3",
-    "bcrypt": "5.0.0"
+    "bcrypt": "5.0.0",
+    "mongodb": "3.6.3"
   }
 }
