--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "e-commercee",
-  "version": "0.0.23",
+  "name": "ecommerceee",
+  "version": "0.0.25",
   "description": "This package contains a backend of what would be the logic of a e-commercee software, the architecture used is made in 3 layers",
   "license": "MIT",
   "author": {
